# pi-camera-sentinel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
config/: pi-camera-redirect.env.example  pi-camera-relay.env.example  pi-camera-sentinel.env.example
docs/: activity-insights.md  archive-retention.md  archive-review.md  camera-tuning.md  home-assistant.md  performance.md  power-diagnostics.md  project-roadmap.md  recovery.md  relay-host.md  system-health-alerts.md  tailscale.md  telegram.md
scripts/: dev-check.sh  install-relay.sh  install.sh  pi-camera-sentinel  tailscale-serve-setup.sh
src/pi_camera_sentinel/: __init__.py  batching.py  camera.py  cli.py  config.py  dashboard.py  exposure.py  health.py  health_alerts.py  masks.py  motion.py  policy.py  recovery.py  recovery_alerts.py  redirect.py  relay.py  retention.py  services.py  telegram.py  webhook.py
src/pi_camera_sentinel/static/: app.js  index.html  motion-zones.html  motion-zones.js  styles.css
systemd/: pi-camera-dashboard.service  pi-camera-exposure-watchdog.service  pi-camera-health-watchdog.service  pi-camera-motion.service  pi-camera-recovery-watchdog.service  pi-camera-redirect.service  pi-camera-relay.service  pi-camera-stream.service
tests/: test_batching.py  test_camera.py  test_cli.py  test_config.py  test_dashboard.py  test_exposure.py  test_health.py  test_health_alerts.py  test_masks.py  test_motion.py  test_policy.py  test_recovery.py  test_recovery_alerts.py  test_relay.py  test_retention.py  test_services.py  test_telegram.py  test_webhook.py
