[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-camera-sentinel"
version = "1.15.1"
description = "Private Raspberry Pi USB webcam streaming and Telegram motion alerts."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Spiros" }
]
dependencies = [
  "Pillow>=10",
  "requests>=2.31"
]
keywords = ["raspberry-pi", "webcam", "telegram", "tailscale", "motion-detection", "ustreamer"]

[project.urls]
Homepage = "https://github.com/spirosrap/pi-camera-sentinel"
Repository = "https://github.com/spirosrap/pi-camera-sentinel"
Issues = "https://github.com/spirosrap/pi-camera-sentinel/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
pi-camera-sentinel = "pi_camera_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pi_camera_sentinel = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
